# ps4_franka_control

./: README.md  package.xml  setup.cfg  setup.py
ps4_franka_control/: gripper_controller_node.py  ps4_controller_node.py  unified_ps4_franka_control.py
